force-app/main/default/objects/commissionEmployeeAttainedDetail__c.object
<CustomObject>
    <fields>
        <fullName>Comm_Attained__c</fullName>
        <label>Comm Attained</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Attainment_Schedule_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Commission Attainment Schedule Item</label>
        <referenceTo>Commission_Attainment_Schedule_Item__c</referenceTo>
        <relationshipLabel>Commission Employee Attained Detail</relationshipLabel>
        <relationshipName>Commission_Employee_Attained_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Employee_Attained_Value__c</fullName>
        <label>Commission Employee Attained Value</label>
        <referenceTo>commissionEmployeeAttainedValue__c</referenceTo>
        <relationshipLabel>Commission Employee Attained Detail</relationshipLabel>
        <relationshipName>Commission_Employee_Attained_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Adjust__c</fullName>
        <label>GP Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Earned__c</fullName>
        <label>GP Earned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Percent__c</fullName>
        <label>Original Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Override_Percent__c</fullName>
        <label>Override Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Schedule_Item__c</fullName>
        <formula>Commission_Attainment_Schedule_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission Employee Attained Detail</label>
    <nameField>
        <displayFormat>EAVD-{0000}</displayFormat>
        <label>Commission Employee Attained Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Employee Attained Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>